# color-util

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
color-util/: CIEDE2000.hpp  RGB_to_HSL.hpp  RGB_to_XYZ.hpp  XYZ_to_Lab.hpp  type.hpp
include/color-util/: CIE76.hpp  CIEDE2000.hpp  HSL_to_RGB.hpp  Lab_to_XYZ.hpp  RGB_to_HSL.hpp  RGB_to_XYZ.hpp  XYZ_to_Lab.hpp  XYZ_to_RGB.hpp  redmean.hpp  type.hpp
tests/CIEDE2000/: CMakeLists.txt  main.cpp
tests/conversions/: CMakeLists.txt  main.cpp
